--- a/.classpath
+++ b/.classpath
@@ -11,16 +11,19 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/CucumberJars/cucumber-core-5.0.0-RC4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/CucumberJars/cucumber-java-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/CucumberJars/cucumber-junit-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/CucumberJars/cucumber-jvm-deps-1.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/CucumberJars/gherkin-2.9.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/libs/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/libs/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/libs/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/libs/okio-1.14.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-core-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-html-0.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-java-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-junit-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-jvm-deps-1.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/gherkin-2.12.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/okio-1.14.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
