--- a/.classpath
+++ b/.classpath
@@ -5,25 +5,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/classes" path="src">
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
-			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/client-combined-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/client-combined-3.141.59-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-core-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-html-0.2.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-java-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-junit-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/cucumber-jvm-deps-1.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/gherkin-2.12.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/celso.silva/Downloads/celso/celso/okio-1.14.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
