--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<version>6.14.3</version>
 		</dependency>
 
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>cucumber-picocontainer</artifactId>
+    <version>1.2.5</version>
+    <scope>test</scope>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
