--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -4,3 +4,4 @@ browser=chrome
 windowMaximize=true
 implicitlyWait=20
 url=http://advantageonlineshopping.com/
+reportConfigPath=/ProjetoHUB_BDD/configs/extent-config.xml
