--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -4,4 +4,4 @@ browser=chrome
 windowMaximize=true
 implicitlyWait=20
 url=http://advantageonlineshopping.com/
-reportConfigPath=/ProjetoHUB_BDD/configs/extent-config.xml
+reportConfigPath=C:\Users\celso.silva\Projeto-BDD\ProjetoHUB_BDD\configs\extent-config.xml
