Refatoração dos prints e cenarios

--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -2,6 +2,6 @@ environment=local
 driverPath=C:\\ChromeDriver\\chromedriver.exe
 browser=chrome
 windowMaximize=true
-implicitlyWait=20
+implicitlyWait=10
 url=http://advantageonlineshopping.com/
-reportConfigPath=C:\Users\celso.silva\Projeto-BDD\ProjetoHUB_BDD\configs\extent-config.xml
+reportConfigPath=C:\\Users\\celso.silva\\Projeto-BDD\\ProjetoHUB_BDD\\configs\\extent-config.xml
